--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,29 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="128"
+    android:viewportHeight="128">
+  <group android:scaleX="0.6661111"
+      android:scaleY="0.6661111"
+      android:translateX="21.368889"
+      android:translateY="21.368889">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M106.14,128H21.86c-12.07,0 -21.86,-9.79 -21.86,-21.86V21.86C0,9.79 9.79,0 21.86,0h84.28c12.07,0 21.86,9.79 21.86,21.86v84.28c0,12.07 -9.79,21.86 -21.86,21.86Z"
+        android:fillColor="#2be28a"/>
+    <path
+        android:pathData="M65.84,54.35v47.87h27.25v-37.14l-27.25,-10.73Z"
+        android:fillColor="#fff"/>
+    <path
+        android:pathData="M34.36,73.71V25.83h27.25v37.16l-27.25,10.72Z"
+        android:fillColor="#fff"/>
+    <path
+        android:pathData="M93.08,38.49v21.93l-11.6,-4.55c-1.65,-0.65 -3.12,-1.73 -4.18,-3.16 -0.01,-0.01 -0.02,-0.03 -0.03,-0.04 -1.78,-2.42 -2.77,-3.59 -3.1,-9.06 -0.06,-0.95 -0.09,-2.76 -0.09,-4.76 0,-2.05 0.02,-4.29 0.05,-6.01l8.69,8.69v-3.42l-10.93,-10.93 -0.06,2.84c-0.01,0.44 -0.11,10.86 0,13.84 0.2,5.02 0.48,7.72 2.56,9.16l0.25,0.18 -8.79,-3.45c-0.02,-1.82 -0.03,-5.46 -0.03,-9.24v-14.6h10.55c0.78,0 1.36,0 1.62,0.01 1.36,0.02 2.17,0.09 3.05,0.4 2.86,1.01 3.37,3.57 3.69,9.04 0.06,0.95 0.08,2.76 0.08,4.76 0,2.05 -0.02,4.29 -0.05,6.01l-8.69,-8.69v3.42l10.93,10.93 0.06,-2.84c0.01,-0.44 0.12,-10.86 0,-13.84 -0.2,-5.02 -0.5,-7.77 -2.58,-9.2h8.54s0.05,7.52 0.05,12.58Z"
+        android:fillColor="#fff"/>
+    <path
+        android:pathData="M47.98,85.39m-3.64,3.64a5.15,5.15 90,1 1,7.29 -7.29a5.15,5.15 90,1 1,-7.29 7.29"
+        android:fillColor="#fff"/>
+    <path
+        android:pathData="M61.61,67.56l-27.25,10.73v23.93h11.82v-8.68c-3.74,-0.83 -6.55,-4.16 -6.55,-8.15 0,-4.61 3.75,-8.35 8.35,-8.35s8.35,3.75 8.35,8.35c0,3.99 -2.81,7.32 -6.55,8.15v8.68h11.82v-34.66Z"
+        android:fillColor="#fff"/>
+  </group>
 </vector>
